Finished kitty config for now

--- a/kitty.conf
+++ b/kitty.conf
@@ -20,11 +20,11 @@
 #: <https://sw.kovidgoyal.net/kitty/kittens/choose-fonts/#font-spec-
 #: syntax>.
 
-# font_size 11.0
+ font_size 12.0
 
 #: Font size (in pts).
 
-# force_ltr no
+# force_ltr yes
 
 #: kitty does not support BIDI (bidirectional text), however, for RTL
 #: scripts, words are automatically displayed in RTL. That is to say,
@@ -240,7 +240,7 @@
 
 #: Text cursor customization {{{
 
-# cursor #cccccc
+ cursor #42f581
 
 #: Default text cursor color. If set to the special value none the
 #: cursor will be rendered with a "reverse video" effect. Its color
@@ -951,7 +951,7 @@
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-# hide_window_decorations no
+ hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only and titlebar-and-corners can be used
@@ -1046,7 +1046,7 @@
 
 #: Tab bar {{{
 
-# tab_bar_edge bottom
+ tab_bar_edge top
 
 #: The edge to show the tab bar on, top or bottom.
 
@@ -1061,7 +1061,7 @@
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-# tab_bar_style fade
+ tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
@@ -1087,7 +1087,7 @@
 #:     a mapping for the select_tab action which presents you with a list of
 #:     tabs and allows for easy switching to a tab.
 
-# tab_bar_align left
+ tab_bar_align center
 
 #: The horizontal alignment of the tab bar, can be one of: left,
 #: center, right.
@@ -1119,13 +1119,13 @@
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-# tab_powerline_style angled
+ tab_powerline_style slanted
 
 #: The powerline separator style between tabs in the tab bar when
 #: using powerline as the tab_bar_style, can be one of: angled,
 #: slanted, round.
 
-# tab_activity_symbol none
+ tab_activity_symbol "!"
 
 #: Some text or a Unicode symbol to show on the tab if a window in the
 #: tab that does not have focus has some activity. If you want to use
@@ -1420,7 +1420,7 @@
 #: interactive mode and reads its startup rc files. Environment
 #: variables are expanded in this setting.
 
-# editor .
+ editor nvim
 
 #: The terminal based text editor (such as vim or nano) to use when
 #: editing the kitty config file or similar tasks.
@@ -1432,7 +1432,7 @@
 #: kitty will cycle through various known editors (vim, emacs, etc.)
 #: and take the first one that exists on your system.
 
-# close_on_child_death no
+ close_on_child_death yes
 
 #: Close the window when the child process (usually the shell) exits.
 #: With the default value no, the terminal will remain open when the
@@ -1694,7 +1694,7 @@
 #: This option must be a comma separated list of the above values.
 #: Only the first valid match, in the order specified, is sourced.
 
-# notify_on_cmd_finish never
+ notify_on_cmd_finish unfocused 60.0
 
 #: Show a desktop notification when a long-running command finishes
 #: (needs shell_integration). The possible values are:
@@ -1803,7 +1803,7 @@
 
 #: OS specific tweaks {{{
 
-# wayland_titlebar_color system
+ wayland_titlebar_color background
 
 #: The color of the kitty window's titlebar on Wayland systems with
 #: client side window decorations such as GNOME. A value of system
@@ -1907,7 +1907,7 @@
 #: configuration will change this value only for newly created OS
 #: windows.
 
-# linux_display_server auto
+ linux_display_server auto
 
 #: Choose between Wayland and X11 backends. By default, an appropriate
 #: backend based on the system state is chosen automatically. Set it
