--- a/kitty.conf
+++ b/kitty.conf
@@ -1223,7 +1223,7 @@
 
 #: The foreground and background colors.
 
- background_opacity 0.8
+ # background_opacity 0.8
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1248,7 +1248,7 @@
 #: will only work if dynamic_background_opacity was enabled in the
 #: original config.
 
-# background_blur 1
+ # background_blur 1
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
@@ -1260,7 +1260,7 @@
 #: platform implements it, so use with care. Currently supported on
 #: macOS and KDE.
 
-# background_image none
+ background_image /home/pets/Pictures/Screenshots/colorful_space.jpg
 
 #: Path to a background image. Must be in PNG/JPEG/WEBP/TIFF/GIF/BMP
 #: format.
@@ -1303,7 +1303,7 @@
 #: decrease_background_opacity) or the remote control facility.
 #: Changing this option by reloading the config is not supported.
 
-# background_tint 0.0
+ background_tint 0.95
 
 #: How much to tint the background image by the background color. This
 #: option makes it easier to read the text. Tinting is done using the
