Add hyprland and tweak some other stuff

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,6 +16,6 @@ set -g status-position bottom
 set -g status-justify left
 set -g status-style 'fg=#70ffb0'
 set -g status-left ''
-set -g status-right '%Y-%m-%d %H:%M'
+set -g status-right '%Y-%d-%m %H:%M'
 
 set-option -g allow-rename off
