--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -44,7 +44,7 @@ $browser = brave
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
+exec-once = systemctl --user start hyprpolkitagent
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
