Fix Brave flickering, small hyprland appearance modifications

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -24,6 +24,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = DP-1, 3840x2560@144, 0x0, 1.5
 monitor = HDMI-A-1, 1920x1200@60, 2560x-200, 1, transform, 1
+monitor = eDP-1, 1920x1080@60, 0x0, 1
 
 ###################
 ### MY PROGRAMS ###
@@ -33,9 +34,9 @@ monitor = HDMI-A-1, 1920x1200@60, 2560x-200, 1, transform, 1
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
-$menu = wofi --show drun
-$browser = brave
+#$fileManager = dolphin
+#$menu = wofi --show drun
+$browser = brave --enable-features=WaylandLinuxDrmSyncobj
 
 #################
 ### AUTOSTART ###
@@ -55,10 +56,11 @@ exec-once = systemctl --user start hyprpolkitagent
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_SIZE,26
+env = HYPRCURSOR_SIZE,26
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 #####################
 ### LOOK AND FEEL ###
@@ -71,7 +73,7 @@ general {
     gaps_in = 5
     gaps_out = 20
 
-    border_size = 2
+    border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
@@ -156,6 +158,7 @@ animations {
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
+		force_split = 2
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
@@ -187,13 +190,15 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
+				scroll_factor = 0.5
     }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true
+    workspace_swipe_min_fingers = true
 }
 
 # Example per-device config
