--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -259,6 +259,7 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Loop through existing workspaces with mainMod + tab
 bind = $mainMod, TAB, workspace, e+1
+bind = $mainMod SHIFT, TAB, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
