--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -45,7 +45,6 @@ $browser = brave --enable-features=WaylandLinuxDrmSyncobj
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = systemctl --user start hyprpolkitagent
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
@@ -215,6 +214,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, B, exec, $browser
+bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
