--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,1 +1,12 @@
-#hyprlock
+general {
+	hide_cursor = true
+	immediate_render = true
+	fail_timeout = 1000
+}
+
+background {
+	monitor =
+	path =
+	color = rgba(1, 1, 1, 0.95)
+	blur_passes = 5
+}
