Install btop, rofi, brightnessctl, add configs for hypridle, rofi, neofetch and keyboard

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -35,7 +35,7 @@ monitor = eDP-1, 1920x1080@60, 0x0, 1
 # Set programs that you use
 $terminal = kitty
 #$fileManager = dolphin
-#$menu = wofi --show drun
+$menu = rofi -show drun
 $browser = brave --enable-features=WaylandLinuxDrmSyncobj
 
 #################
@@ -174,9 +174,9 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
+    kb_layout = ee
+    kb_variant = us
+    kb_model = pc105
     kb_options =
     kb_rules =
 
@@ -214,7 +214,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, B, exec, $browser
-bind = $mainMod, L, exec, hyprlock
+bind = $mainMod SHIFT, L, exec, hyprlock
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
