--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -36,7 +36,7 @@ monitor = eDP-1, 1920x1080@60, 0x0, 1
 $terminal = kitty
 #$fileManager = dolphin
 $menu = rofi -show drun
-$browser = brave --enable-features=WaylandLinuxDrmSyncobj
+$browser = brave --enable-features=WaylandLinuxDrmSyncobj --enable-hardware-acceleration
 
 #################
 ### AUTOSTART ###
@@ -65,17 +65,16 @@ env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 5
-    gaps_out = 20
-
-    border_size = 3
+    gaps_in = 8
+    gaps_out = 15
+		border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
+    resize_on_border = true
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -85,7 +84,7 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 5
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
