--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -26,6 +26,10 @@ monitor = DP-1, 3840x2560@144, 0x0, 1.5
 monitor = HDMI-A-1, 1920x1200@60, 2560x-200, 1, transform, 1
 monitor = eDP-1, 1920x1080@60, 0x0, 1
 
+xwayland {
+	enabled = true
+	force_zero_scaling = true
+}
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -293,3 +297,4 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
