--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -17,7 +17,7 @@
 	],
 	"modules-right": [
 		"mpd",
-		"pulseaudio",
+		"wireplumber",
 		"network",
 		"power-profiles-daemon",
 		"cpu",
@@ -169,23 +169,11 @@
 		"format-disconnected": "Disconnected ⚠",
 		"format-alt": "{ifname}: {ipaddr}/{cidr}"
 	},
-	"pulseaudio": {
-		// "scroll-step": 1, // %, can be a float
-		"format": "{volume}% {icon} {format_source}",
-		"format-bluetooth": "{volume}% {icon} {format_source}",
-		"format-bluetooth-muted": " {icon} {format_source}",
-		"format-muted": " {format_source}",
-		"format-source": "  {volume}%",
-		"format-source-muted": "",
-		"format-icons": {
-			"headphone": "",
-			"hands-free": "",
-			"headset": "",
-			"phone": "",
-			"portable": "",
-			"car": "",
-			"default": ["", "", ""]
-		},
+	"wireplumber": {
+		"scroll-step": 1.0,
+		"format": " {volume}%",
+		"max-volume": 100.0,
+		"format-muted": "",
 		"on-click": "wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle"
 	},
 	"custom/media": {
