--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,12 +1,144 @@
+# sample hyprlock.conf
+# for more configuration options, refer https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock
+#
+# rendered text in all widgets supports pango markup (e.g. <b> or <i> tags)
+# ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#general-remarks
+#
+# shortcuts to clear password buffer: ESC, Ctrl+U, Ctrl+Backspace
+#
+# you can get started by copying this config to ~/.config/hypr/hyprlock.conf
+#
+
+$font = Monospace
+
 general {
-	hide_cursor = true
-	immediate_render = true
-	fail_timeout = 1000
+    hide_cursor = false
+}
+
+# uncomment to enable fingerprint authentication
+# auth {
+#     fingerprint {
+#         enabled = true
+#         ready_message = Scan fingerprint to unlock
+#         present_message = Scanning...
+#         retry_delay = 250 # in milliseconds
+#     }
+# }
+
+animations {
+    enabled = true
+    bezier = linear, 1, 1, 0, 0
+    animation = fadeIn, 1, 5, linear
+    animation = fadeOut, 1, 5, linear
+    animation = inputFieldDots, 1, 2, linear
 }
 
 background {
-	monitor =
-	path =
-	color = rgba(1, 1, 1, 0.95)
-	blur_passes = 5
+    monitor =
+    path = screenshot
+    blur_passes = 3
+}
+
+input-field {
+    monitor = DP-1
+    size = 30%, 4%
+    outline_thickness = 3
+    inner_color = rgba(0, 0, 0, 0.0) # no fill
+
+    outer_color = rgba(33ccffee) rgba(00ff99ee) 45deg
+    check_color = rgba(00ff99ee) rgba(ff6633ee) 120deg
+    fail_color = rgba(ff6633ee) rgba(ff0066ee) 40deg
+
+    font_color = rgb(143, 143, 143)
+    fade_on_empty = true
+    rounding = 35
+
+    font_family = $font
+    fail_text = $PAMFAIL
+
+    # uncomment to use a letter instead of a dot to indicate the typed password
+		dots_text_format = ArchBTW
+    dots_size = 0.4
+    dots_spacing = 0.1
+
+    # uncomment to use an input indicator that does not show the password length (similar to swaylock's input indicator)
+    # hide_input = true
+
+    position = 0, -20
+    halign = center
+    valign = center
+}
+
+input-field {
+    monitor = eDP-1
+    size = 20%, 5%
+    outline_thickness = 3
+    inner_color = rgba(0, 0, 0, 0.0) # no fill
+
+    outer_color = rgba(33ccffee) rgba(00ff99ee) 45deg
+    check_color = rgba(00ff99ee) rgba(ff6633ee) 120deg
+    fail_color = rgba(ff6633ee) rgba(ff0066ee) 40deg
+
+    font_color = rgb(143, 143, 143)
+    fade_on_empty = true
+    rounding = 40
+
+    font_family = $font
+    fail_text = $PAMFAIL
+
+    # uncomment to use a letter instead of a dot to indicate the typed password
+    # dots_text_format = *
+	  # dots_size = 0.4
+    dots_spacing = 0.3
+
+    # uncomment to use an input indicator that does not show the password length (similar to swaylock's input indicator)
+    # hide_input = true
+
+    position = 0, -20
+    halign = center
+    valign = center
+}
+
+label {
+    monitor = eDP-1
+    text = $TIME # ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#variable-substitution
+    font_size = 80
+    font_family = $font
+
+    position = -30, -30
+    halign = right
+    valign = top
+}
+
+label {
+    monitor = eDP-1
+    text = cmd[update:60000] date +"%A, %D" # update every 60 seconds
+    font_size = 30
+    font_family = $font
+
+    position = -30, -180
+    halign = right
+    valign = top
+}
+
+label {
+    monitor = HDMI-A-1
+    text = $TIME # ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#variable-substitution
+    font_size = 80
+    font_family = $font
+
+    position = 0, 35
+    halign = center
+    valign = center
+}
+
+label {
+    monitor = HDMI-A-1
+    text = cmd[update:60000] date +"%A, %d" # update every 60 seconds
+    font_size = 30
+    font_family = $font
+
+    position = 0, -35
+    halign = center
+    valign = center
 }
