Open Kitty and Brave when launching Hyprland

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -49,9 +49,8 @@ $browser = brave --enable-features=WaylandLinuxDrmSyncobj --enable-hardware-acce
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-
+exec-once = kitty
+exec-once = brave --enable-features=WaylandLinuxDrmSyncobj --enable-hardware-acceleration
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -296,4 +295,3 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-
