--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -3,8 +3,8 @@
 	// "layer": "top", // Waybar at top layer
 	// "position": "bottom", // Waybar position (top|bottom|left|right)
 	"height": 30, // Waybar height (to be removed for auto height)
-	// "width": 1280, // Waybar width
-	"spacing": 7, // Gaps between modules (4px)
+	//"width": 1200, // Waybar width
+	"spacing": 7, // Gaps between modules (px)
 	// Choose the order of the modules
 	"modules-left": [
 		"hyprland/workspaces",
@@ -20,9 +20,6 @@
 		"wireplumber",
 		"network",
 		"power-profiles-daemon",
-		"cpu",
-		"memory",
-		"temperature",
 		"backlight",
 		"keyboard-state",
 		//"hyprland/language",
@@ -34,21 +31,8 @@
 	],
 	// Modules configuration
 	"hyprland/workspaces": {
-		"disable-scroll": true,
-		"all-outputs": true,
+		"format": "{name}",
 		"separate-outputs": true,
-		"warp-on-scroll": false,
-		"format": "{name}: {icon}",
-		"format-icons": {
-			"1": "",
-			"2": "",
-			"3": "",
-			"4": "",
-			"5": "",
-			"urgent": "",
-			"focused": "",
-			"default": ""
-		}
 	},
 	"keyboard-state": {
 		"numlock": true,
@@ -170,7 +154,7 @@
 		"format-alt": "{ifname}: {ipaddr}/{cidr}"
 	},
 	"wireplumber": {
-		"scroll-step": 1.0,
+		"scroll-step": 5.0,
 		"format": " {volume}%",
 		"max-volume": 100.0,
 		"format-muted": "",
