Match Mako rounding, map caps to esc, add shortcut for fullscreening

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -87,8 +87,8 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 5
-    rounding_power = 2
+    rounding = 8
+    rounding_power = 2.0
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -179,7 +179,7 @@ input {
     kb_layout = ee
     kb_variant = us
     kb_model = pc105
-    kb_options =
+    kb_options = caps:escape
     kb_rules =
 
     follow_mouse = 1
@@ -220,6 +220,7 @@ bind = $mainMod SHIFT, L, exec, hyprlock
 bind = $mainMod, C, killactive,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, fullscreen,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
