--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,98 +1,40 @@
 // -*- mode: jsonc -*-
 {
-	// "layer": "top", // Waybar at top layer
-	// "position": "bottom", // Waybar position (top|bottom|left|right)
-	"height": 30, // Waybar height (to be removed for auto height)
-	//"width": 1200, // Waybar width
 	"spacing": 7, // Gaps between modules (px)
 	// Choose the order of the modules
 	"modules-left": [
-		"hyprland/workspaces",
 		"hyprland/mode",
 		"hyprland/scratchpad",
-		"custom/media"
+		"custom/media",
+		"memory",
+		"cpu"
 	],
 	"modules-center": [
-		"hyprland/window"
+		"hyprland/workspaces",
 	],
 	"modules-right": [
-		"mpd",
 		"wireplumber",
 		"network",
 		"power-profiles-daemon",
 		"backlight",
-		"keyboard-state",
 		//"hyprland/language",
 		"battery",
 		"battery#bat2",
 		"clock",
 		"tray",
-		"custom/power"
 	],
 	// Modules configuration
 	"hyprland/workspaces": {
 		"format": "{name}",
 		"separate-outputs": true,
 	},
-	"keyboard-state": {
-		"numlock": true,
-		"capslock": true,
-		"format": "{name} {icon}",
-		"format-icons": {
-			"locked": "",
-			"unlocked": ""
-		}
-	},
-	"sway/mode": {
-		"format": "<span style=\"italic\">{}</span>"
-	},
-	"sway/scratchpad": {
-		"format": "{icon} {count}",
-		"show-empty": false,
-		"format-icons": ["", ""],
-		"tooltip": true,
-		"tooltip-format": "{app}: {title}"
-	},
-	"mpd": {
-		"format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
-		"format-disconnected": "Disconnected ",
-		"format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
-		"unknown-tag": "N/A",
-		"interval": 5,
-		"consume-icons": {
-			"on": " "
-		},
-		"random-icons": {
-			"off": "<span color=\"#f53c3c\"></span> ",
-			"on": " "
-		},
-		"repeat-icons": {
-			"on": " "
-		},
-		"single-icons": {
-			"on": "1 "
-		},
-		"state-icons": {
-			"paused": "",
-			"playing": ""
-		},
-		"tooltip-format": "MPD (connected)",
-		"tooltip-format-disconnected": "MPD (disconnected)"
-	},
-	"idle_inhibitor": {
-		"format": "{icon}",
-		"format-icons": {
-			"activated": "",
-			"deactivated": ""
-		}
-	},
 	"tray": {
-		// "icon-size": 21,
+		"icon-size": 25,
 		"spacing": 10
 	},
 	"clock": {
-		// "timezone": "America/New_York",
-		"tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+		"timezone": "Europe/Tallinn",
+		"tooltip": false,
 		"format-alt": "{:%Y-%m-%d}"
 	},
 	"cpu": {
@@ -100,7 +42,10 @@
 		"tooltip": false
 	},
 	"memory": {
-		"format": "{}% "
+		"interval": 5,
+		"format": "{used:0.1f} GB",
+		"on-click": "kitty btop",
+		"tooltip": false
 	},
 	"temperature": {
 		// "thermal-zone": 2,
@@ -146,12 +91,13 @@
 	},
 	"network": {
 		// "interface": "wlp2*", // (Optional) To force the use of this interface
+		"interval": 30,
+		"format-ethernet": "{ipaddr}/{cidr}  {bandwitdhUpBytes}",
 		"format-wifi": "{essid} ({signalStrength}%) ",
-		"format-ethernet": "{ipaddr}/{cidr} ",
-		"tooltip-format": "{ifname} via {gwaddr} ",
 		"format-linked": "{ifname} (No IP) ",
 		"format-disconnected": "Disconnected ⚠",
-		"format-alt": "{ifname}: {ipaddr}/{cidr}"
+		"format-alt": "{ifname}",
+		"tooltip": false
 	},
 	"wireplumber": {
 		"scroll-step": 5.0,
@@ -172,16 +118,4 @@
 		"exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
 		// "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
 	},
-	"custom/power": {
-		"format" : "⏻ ",
-		"tooltip": false,
-		"menu": "on-click",
-		"menu-file": "$HOME/.config/waybar/power_menu.xml", // Menu file in resources folder
-		"menu-actions": {
-			"shutdown": "shutdown",
-			"reboot": "reboot",
-			"suspend": "systemctl suspend",
-			"hibernate": "systemctl hibernate"
-		}
-	}
 }
