Some more configs for Waybar on laptop

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -3,9 +3,6 @@
 	"spacing": 7, // Gaps between modules (px)
 	// Choose the order of the modules
 	"modules-left": [
-		"hyprland/mode",
-		"hyprland/scratchpad",
-		"custom/media",
 		"memory",
 		"cpu"
 	],
@@ -16,26 +13,16 @@
 		"wireplumber",
 		"network",
 		"power-profiles-daemon",
-		"backlight",
-		//"hyprland/language",
 		"battery",
-		"battery#bat2",
 		"clock",
 		"tray",
 	],
 	// Modules configuration
-	"hyprland/workspaces": {
-		"format": "{name}",
-		"separate-outputs": true,
-	},
-	"tray": {
-		"icon-size": 25,
-		"spacing": 10
-	},
-	"clock": {
-		"timezone": "Europe/Tallinn",
-		"tooltip": false,
-		"format-alt": "{:%Y-%m-%d}"
+	"memory": {
+		"interval": 5,
+		"format": "{used:0.1f} GB",
+		"on-click": "kitty btop",
+		"tooltip": false
 	},
 	"cpu": {
 		"interval": 5,
@@ -43,42 +30,25 @@
 		"on-click": "kitty btop",
 		"tooltip": false
 	},
-	"memory": {
-		"interval": 5,
-		"format": "{used:0.1f} GB",
-		"on-click": "kitty btop",
+	"hyprland/workspaces": {
+		"format": "{name}",
+		"separate-outputs": true,
+	},
+	"wireplumber": {
+		"scroll-step": 5.0,
+		"format": " {volume}%",
+		"format-muted": "",
+		"on-click": "wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle"
+	},
+	"network": {
+		// "interface": "wlp2*", // (Optional) To force the use of this interface
+		"interval": 2,
+		"format-ethernet": "{ifname}",
+		"format-wifi": "{essid} ({signalStrength}%) ",
+		"format-linked": "{ifname} (No IP) ",
+		"format-disconnected": "Disconnected ⚠",
+		"format-alt": " {bandwidthUpBytes} | {bandwidthDownBytes} ",
 		"tooltip": false
-	},
-	"temperature": {
-		// "thermal-zone": 2,
-		// "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-		"critical-threshold": 80,
-		// "format-critical": "{temperatureC}°C {icon}",
-		"format": "{temperatureC}°C {icon}",
-		"format-icons": ["", "", ""]
-	},
-	"backlight": {
-		// "device": "acpi_video1",
-		"format": "{percent}% {icon}",
-		"format-icons": ["", "", "", "", "", "", "", "", ""]
-	},
-	"battery": {
-		"states": {
-			// "good": 95,
-			"warning": 30,
-			"critical": 15
-		},
-		"format": "{capacity}% {icon}",
-		"format-full": "{capacity}% {icon}",
-		"format-charging": "{capacity}% ",
-		"format-plugged": "{capacity}% ",
-		"format-alt": "{time} {icon}",
-		// "format-good": "", // An empty format will hide the module
-		// "format-full": "",
-		"format-icons": ["", "", "", "", ""]
-	},
-	"battery#bat2": {
-		"bat": "BAT2"
 	},
 	"power-profiles-daemon": {
 		"format": "{icon}",
@@ -91,32 +61,24 @@
 			"power-saver": ""
 		}
 	},
-	"network": {
-		// "interface": "wlp2*", // (Optional) To force the use of this interface
-		"interval": 2,
-		"format-ethernet": "{ifname}",
-		"format-wifi": "{essid} ({signalStrength}%) ",
-		"format-linked": "{ifname} (No IP) ",
-		"format-disconnected": "Disconnected ⚠",
-		"format-alt": " {bandwidthUpBytes} | {bandwidthDownBytes} ",
-		"tooltip": false
-	},
-	"wireplumber": {
-		"scroll-step": 5.0,
-		"format": " {volume}%",
-		"format-muted": "",
-		"on-click": "wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle"
-	},
-	"custom/media": {
-		"format": "{icon} {text}",
-		"return-type": "json",
-		"max-length": 40,
-		"format-icons": {
-			"spotify": "",
-			"default": "🎜"
+	"battery": {
+		"interval": 5,
+		"states": {
+			"warning": 30,
+			"critical": 15
 		},
-		"escape": true,
-		"exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
-		// "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
+		"format": "{capacity}% {icon}",
+		"format-charging": "{capacity}% ",
+		"format-time": "{H}h {m}min",
+		"format-icons": ["", "", "", "", ""]
 	},
+	"clock": {
+		"timezone": "Europe/Tallinn",
+		"tooltip": false,
+		"format-alt": "{:%Y-%m-%d}"
+	},
+	"tray": {
+		"icon-size": 25,
+		"spacing": 10
+	}
 }
