--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,135 +1,116 @@
-# for more configuration options, refer https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock
-#
-# rendered text in all widgets supports pango markup (e.g. <b> or <i> tags)
-# ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#general-remarks
-#
-
 $font = Poppins
 
 general {
-    hide_cursor = false
+	hide_cursor = false
 }
 
-# uncomment to enable fingerprint authentication
-# auth {
-#     fingerprint {
-#         enabled = true
-#         ready_message = Scan fingerprint to unlock
-#         present_message = Scanning...
-#         retry_delay = 250 # in milliseconds
-#     }
-# }
-
 animations {
-    enabled = true
-    bezier = linear, 1, 1, 0, 0
-    animation = fadeIn, 1, 5, linear
-    animation = fadeOut, 1, 5, linear
-    animation = inputFieldDots, 1, 2, linear
+	enabled = true
+	bezier = linear, 1, 1, 0, 0
+	animation = fadeIn, 1, 5, linear
+	animation = fadeOut, 1, 5, linear
+	animation = inputFieldDots, 1, 2, linear
 }
 
 background {
-    monitor =
-    path = screenshot
-    blur_passes = 2
+	path = screenshot
+	blur_passes = 2
 }
 
 input-field {
-    monitor = DP-1
-    size = 30%, 10%
-    outline_thickness = 3
-    inner_color = rgba(0, 0, 0, 0.0)
+	monitor = DP-1
+	size = 30%, 10%
+	outline_thickness = 3
+	inner_color = rgba(0, 0, 0, 0)
 
-    outer_color =
-    check_color =
-    fail_color = rgba(ff0066ee)
+	outer_color = rgba(0, 0, 0, 0)
+	check_color = rgba(0, 0, 0, 0)
+	fail_color = rgba(f53c3cee)
 
-    font_color = rgb(143, 143, 143)
-    fade_on_empty = true
-    rounding = -1
+	font_color = rgb(143, 143, 143)
+	fade_on_empty = true
+	rounding = -1
 
-    font_family = $font
-    fail_text = $PAMFAIL
+	font_family = $font
+	fail_text = $PAMFAIL
 
-		dots_text_format = ArchBTW
-    dots_size = 1.0
-		dots_spacing = 0.5
+	dots_text_format = ArchBTW
+	dots_size = 1.0
+	dots_spacing = 0.5
+	dots_rounding = 0
 
-    position = 0, -20
-    halign = center
-    valign = center
+	position = 0, 0
+	halign = center
+	valign = center
 }
 
 label {
-    monitor = HDMI-A-1
-    text = $TIME # ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#variable-substitution
-    font_size = 120
-    font_family = $font
+	monitor = HDMI-A-1
+	text = $TIME # ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#variable-substitution
+	font_size = 120
+	font_family = $font
 
-    position = 0, 65
-    halign = center
-    valign = center
+	position = 0, 65
+	halign = center
+	valign = center
 }
 
 label {
-    monitor = HDMI-A-1
-    text = cmd[update:60000] date +"%A, %d" # update every 60 seconds
-    font_size = 70
-    font_family = $font
+	monitor = HDMI-A-1
+	text = cmd[update:60000] date +"%A, %d" # update every 60 seconds
+	font_size = 70
+	font_family = $font
 
-    position = 0, -65
-    halign = center
-    valign = center
+	position = 0, -65
+	halign = center
+	valign = center
 }
 
 input-field {
-    monitor = eDP-1
-    size = 20%, 5%
-    outline_thickness = 3
-    inner_color = rgba(0, 0, 0, 0.0)
+	monitor = eDP-1
+	size = 30%, 10%
+	outline_thickness = 3
+	inner_color = rgba(0, 0, 0, 0)
 
-    outer_color = rgba(33ccffee) rgba(00ff99ee) 45deg
-    check_color = rgba(00ff99ee) rgba(ff6633ee) 120deg
-    fail_color = rgba(ff6633ee) rgba(ff0066ee) 40deg
+	outer_color = rgba(0, 0, 0, 0)
+	check_color = rgba(0, 0, 0, 0)
+	fail_color = rgba(f53c3cee)
 
-    font_color = rgb(143, 143, 143)
-    fade_on_empty = true
-    rounding = 40
+	font_color = rgb(143, 143, 143)
+	fade_on_empty = true
+	rounding = -1
 
-    font_family = $font
-    fail_text = $PAMFAIL
+	font_family = $font
+	fail_text = $PAMFAIL
 
-    # uncomment to use a letter instead of a dot to indicate the typed password
-    # dots_text_format = *
-	  # dots_size = 0.4
-    dots_spacing = 0.3
+	dots_text_format = ArchBTW
+	dots_size = 1.0
+	dots_spacing = 0.5
+	dots_rounding = 0
 
-    # uncomment to use an input indicator that does not show the password length (similar to swaylock's input indicator)
-    # hide_input = true
-
-    position = 0, -20
-    halign = center
-    valign = center
+	position = 0, 0
+	halign = center
+	valign = center
 }
 
 label {
-    monitor = eDP-1
-    text = $TIME # ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#variable-substitution
-    font_size = 80
-    font_family = $font
+	monitor = eDP-1
+	text = $TIME # ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#variable-substitution
+	font_size = 80
+	font_family = $font
 
-    position = -30, -30
-    halign = right
-    valign = top
+	position = -30, -30
+	halign = right
+	valign = top
 }
 
 label {
-    monitor = eDP-1
-    text = cmd[update:60000] date +"%A, %D" # update every 60 seconds
-    font_size = 30
-    font_family = $font
+	monitor = eDP-1
+	text = cmd[update:60000] date +"%A, %d" # update every 60 seconds
+	font_size = 30
+	font_family = $font
 
-    position = -30, -180
-    halign = right
-    valign = top
+	position = -30, -150
+	halign = right
+	valign = top
 }
