Remove special workspace, add screenshotting

--- a/hypr/partials/keybinds.conf
+++ b/hypr/partials/keybinds.conf
@@ -6,11 +6,9 @@ bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, B, exec, $browser
 bind = $mainMod SHIFT, L, exec, hyprlock
 bind = $mainMod, C, killactive,
-bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
 
 # Move focus with mainMod + vim motions
@@ -43,9 +41,10 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+#	# Example special workspace (scratchpad)
+#	bind = $mainMod, S, togglespecialworkspace, magic
+#	bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod SHIFT, S, exec, grim -g "$(slurp -d)" - | wl-copy
 
 # Loop through existing workspaces with mainMod + tab
 bind = $mainMod, TAB, workspace, e+1
