--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -36,6 +36,7 @@
 		"format-connected": " {device_alias}",
 		"tooltip-format": "{device_address}",
 		"tooltip-format-connected-battery": "{device_battery_percentage}% @ {device_address}",
+		"on-click": "bash ~/dotfiles/scripts/bt-switch.sh"
 	},
 	"hyprland/workspaces": {
 		"format": "{name}",
