Add touchpad navigation to brave

--- a/hypr/partials/autostart.conf
+++ b/hypr/partials/autostart.conf
@@ -1,2 +1,2 @@
-exec-once = kitty
-exec-once = brave --enable-features=WaylandLinuxDrmSyncobj --enable-hardware-acceleration
+exec-once = $terminal
+exec-once = $browser
