--- a/hypr/partials/programs.conf
+++ b/hypr/partials/programs.conf
@@ -1,3 +1,3 @@
 $terminal = kitty
 $menu = rofi -show drun
-$browser = brave --enable-features=WaylandLinuxDrmSyncobj --enable-hardware-acceleration
+$browser = brave --enable-features=WaylandLinuxDrmSyncobj,TouchpadOverscrollHistoryNavigation --enable-hardware-acceleration
