Initialize tmux plugins with tmux-resurrect

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,3 +19,8 @@ set -g status-left ''
 set -g status-right '%Y-%d-%m %H:%M'
 
 set-option -g allow-rename off
+
+## Plugin-related
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+run '$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm'
