--- a/hypr/partials/keybinds.conf
+++ b/hypr/partials/keybinds.conf
@@ -59,8 +59,10 @@ bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 5%+;bash ~/dotfiles/custom/scripts/brightness-noti.sh
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 5%-;bash ~/dotfiles/custom/scripts/brightness-noti.sh
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 5%+; bash ~/dotfiles/custom/scripts/brightness-noti.sh
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 5%-; bash ~/dotfiles/custom/scripts/brightness-noti.sh
+bindel = SHIFT, XF86MonBrightnessUp, exec, brightnessctl s 100%+
+bindel = SHIFT, XF86MonBrightnessDown, exec, brightnessctl s 100%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
