Fix Hyprland 0.53 breaking changes

--- a/sddm/sddm.conf
+++ b/sddm/sddm.conf
@@ -74,7 +74,7 @@ ReuseSession=true
 
 
 [Wayland]
-CompositorCommand=Hyprland -c /usr/lib/sddm/sddm.conf.d/hyprland.conf
+CompositorCommand=start-hyprland -- -c /usr/lib/sddm/sddm.conf.d/hyprland.conf
 
 # Enable Qt's automatic high-DPI scaling
 EnableHiDPI=true
