--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,6 +19,7 @@ set -g status-left ''
 set -g status-right '%Y-%d-%m %H:%M'
 
 set-option -g allow-rename off
+set-option -g focus-events on
 
 ## Plugin-related
 set -g @plugin 'tmux-plugins/tmux-resurrect'
